# miner

./: .envrc  .gitignore  Cargo.toml  flake.nix
monero_stratum/: Cargo.toml
monero_stratum/src/: lib.rs  login.rs  submit.rs  test.rs
randomx/: Cargo.toml
randomx/src/: instruction.rs  lib.rs  superscalar.rs
src/: main.rs
