[package]
name = "miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
monero_stratum.workspace = true

pretty_env_logger.workspace = true

[workspace]
members = [ "monero_stratum" ]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Redhawk18"]
license = "MPL-2.0"

[workspace.dependencies]
monero_stratum = { path = "monero_stratum" }

log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.8"
tokio = { version = "1", features = [ "io-util", "net", "macros", "rt" ] }


