[package]
name = "monero_stratum"
description = "A Rust implementation of Monero's Stratum protocol."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
